# Interactive-Soccer-Positions

./: .gitignore  README.md  pyproject.toml  settings.yaml
docs/: pipeline.md
presets/: broadcast.yaml  tactical.yaml
src/sopovis/: __init__.py  main.py
src/sopovis/analytics/: __init__.py  pipeline.py  producers.py  redzone.py  roles.py  shape_graph.py
src/sopovis/bundle/: __init__.py  builder.py  bundle.py  cache.py
src/sopovis/config/: __init__.py  presets.py  settings.py
src/sopovis/io/: __init__.py  events.py  files.py  ingest.py  metadata.py  tracking.py
src/sopovis/model/: __init__.py  events.py  meta.py  sections.py  state.py
src/sopovis/render/: __init__.py  common.py  elements.py  layers.py  orientation.py  registry.py  scene.py  sizes.py
src/sopovis/render/dynamic/: __init__.py  ball.py  defensive_line.py  shape_graph.py  shirt_numbers.py  team_glyphs.py  velocity_arrows.py
src/sopovis/render/pitch/: __init__.py
src/sopovis/render/position/: __init__.py  context.py  defaults.py  elements.py  filters.py  geometry.py  layers.py  redzone_presence.py  registry.py  role_heatmap.py  section_boundaries.py  stack.py  substitution_markers.py
src/sopovis/render/static/: __init__.py  half_space_lines.py  pitch_markings.py
src/sopovis/ui/: __init__.py  app.py  canvas.py  cursor.py  desktop.py  hover.py  pitch_view.py  position_layers.py  position_plot.py  span_zoom.py  time_window.py  timeline.py  timeline_layers.py  tooltips.py
tests/: conftest.py  test_canvas.py  test_main.py  test_products.py  test_redzone.py
(+25 files in other folders)
