[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sopovis"
version = "0.1.0"
description = "SoPoVis — Soccer Positions Visualization (desktop UI and library on DFL tracking data)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "networkx",
    "matplotlib",
    "mplsoccer",
    "floodlight",
    "pydantic>=2",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
sopovis = "sopovis.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
